--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,18 +15,11 @@
             <file>tests/TestShareFileApi.php</file>
         </testsuite>
     </testsuites>
-    <filter>
-        <whitelist>
+    <coverage>
+        <include>
             <directory suffix=".php">src/</directory>
-        </whitelist>
-    </filter>
-    <logging>
-        <log type="tap" target="build/report.tap"/>
-        <log type="junit" target="build/report.junit.xml"/>
-        <log type="coverage-html" target="build/coverage" charset="UTF-8" yui="true" highlight="true"/>
-        <log type="coverage-text" target="build/coverage.txt"/>
-        <log type="coverage-clover" target="build/logs/clover.xml"/>
-    </logging>
+        </include>
+    </coverage>
     <php>
         <const name="HOSTNAME" value=""/>
         <const name="CLIENT_ID" value=""/>
